# Automatic-Drum-Transcription

./: .env  .gitignore  SpecFlux.py  dataset.py  debug.ipynb  evallib.py  evaluate_experiments.ipynb  generics.py  hyperparameter_search.py  hyperparameters.py  init-env.sh  main.py  onnx.ipynb  pyproject.toml  requirements.txt  settings.py  speedup.rs  tensorboard_rerun_blueprint.rbl  text_viz.ipynb  train_lightning.py
data/a2md_public/: genres.csv  groups.csv  splits_10-folds_0.csv  splits_10-folds_3.csv  splits_3-folds_0.csv  splits_3-folds_3.csv  splits_5-folds_0.csv  splits_5-folds_3.csv
data/rbma_13/: titles.txt
data/rbma_13/annotations/beats/: RBMA-13-Track-01.txt  RBMA-13-Track-02.txt  RBMA-13-Track-03.txt  RBMA-13-Track-04.txt  RBMA-13-Track-05.txt  RBMA-13-Track-08.txt  RBMA-13-Track-09.txt  RBMA-13-Track-10.txt  RBMA-13-Track-11.txt  RBMA-13-Track-12.txt  RBMA-13-Track-13.txt  RBMA-13-Track-14.txt  RBMA-13-Track-15.txt  RBMA-13-Track-16.txt  RBMA-13-Track-17.txt  RBMA-13-Track-18.txt  RBMA-13-Track-19.txt  RBMA-13-Track-20.txt  RBMA-13-Track-21.txt  RBMA-13-Track-22.txt  RBMA-13-Track-23.txt  RBMA-13-Track-24.txt  RBMA-13-Track-25.txt  RBMA-13-Track-27.txt  RBMA-13-Track-28.txt  RBMA-13-Track-29.txt  RBMA-13-Track-30.txt
data/rbma_13/splits/: 3-fold_cv_0.txt  3-fold_cv_1.txt  3-fold_cv_2.txt
dataset/: A2MD.py  MDB_Drums.py  RBMA13.py  TMIDT.py  __init__.py  dataset.py  datasets.py  generics.py  lightning.py  mapping.py  utils.py
model/: CRNN.py  SpecFlux.py  __init__.py  cnn.py  cnnA.py  cnnM.py  cnnM2.py  cnn_feature.py  lightning_weight_averaging.py  model.py  unet.py
model/mamba/: __init__.py  jamba.py  mamba.py  pscan.py
tests/: debug.ipynb  evallib.test.py
